--- a/testernette/Makefile
+++ b/testernette/Makefile
@@ -1,28 +1,28 @@
 NAME =		test.a
 
-SUBDIRS =	printf
+SUBDIR =	printf
 
 SRCS =		test_output.c test_character.c test_decimal.c test_hexadecimal.c
 
 OBJS =		${SRCS:.c=.o}
 
-GCC =		gcc
+GCCW =		gcc -Wall -Wextra
 
 AR =		ar -rc
 
 RM =		rm -f
 
-${NAME}:	${OBJS} ${SUBDIRS}
+${NAME}:	${OBJS} ${SUBDIR}
 			cp ../printf/libftprintf.a .
 			mv libftprintf.a ${NAME}
 			${AR} ${NAME} ${OBJS}
-			${GCC} main.c test.a -o executable && ./executable && rm executable
+			${GCCW} main.c test.a -o executable && ./executable && rm executable
 			make fclean
 
 ${OBJS}:	${SRCS}
-			${GCC} -c ${SRCS}
+			${GCCW} -c ${SRCS}
 
-${SUBDIRS}:
+${SUBDIR}:
 			echo "\n\033[1;36mNorminette\033[0;33m\n"
 			cd ../printf && norminette && ${MAKE} -s
 
@@ -38,5 +38,5 @@ fclean:		clean
 
 re:			fclean all
 
-.PHONY:		all clean fclean re
+.PHONY:		all clean fclean re ${SUBDIR}
 
